<resources>
    <string name="app_name">ScannerQR</string>
    <integer name="viewfinder_border_width">4</integer>
    <integer name="viewfinder_border_length">60</integer>

    <string name="bartSimpson">Bart Simpson</string>
    <string name="date">12/4/2024</string>
    <string name="time">14:25</string>
    <string name="general">General</string>
    <string name="title_share_app"><u>Use “Share” in other apps</u>></string>
    <string name="fullname">Fullname</string>
    <string name="company">Company</string>
    <string name="phoneNumber">Phone number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="zipCode">ZIP code</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="nation">Nation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wifi">Wi-Fi</string>
    <string name="networkName">Network name</string>
    <string name="wPA_WPA2">WPA/WPA2</string>
    <string name="password">Password</string>
    <string name="event">Event</string>
    <string name="eventTitle">Event title</string>
    <string name="wap">WAP</string>
    <string name="tru">_</string>
    <string name="title">Title</string>
    <string name="website">Website</string>
    <string name="startDay">Start day</string>
    <string name="startTime">Start time</string>
    <string name="endDate">End day</string>
    <string name="endTime">End time</string>
    <string name="eventLocation">Event location</string>
    <string name="describe">Describe</string>
    <string name="allDayEvent">All day event</string>
    <string name="helpAndFeedbackFragment">Help and feedback</string>
    <string name="addQRCodeFragment">Add QR Code</string>
    <string name="document">Document</string>
    <string name="sms">SMS</string>
    <string name="app">App</string>
    <string name="scanningTips">Scanning tips</string>
    <string name="detail">Detail</string>
    <string name="sdt">0987654321</string>
    <string name="seeCode">See Code</string>
    <string name="WifiConnection">Wifi connection</string>
    <string name="copyPassword">Copy password</string>
    <string name="copyTheNetworkName">Copy the network name</string>
    <string name="searchForProductsOnTheWeb">Search for products on the web</string>
    <string name="textScanning">Scanning does not work</string>
    <string name="supportCode">Support code</string>
    <string name="textScanningDoesNot1">First, make sure you have read all the information\nunder \'Support Codes and \'Scan Tips.</string>
    <string name="textScanningDoesNot2">To be able to scan, the most important thing is that the code is not blurred, has clear contrast and is not tilted.</string>
    <string name="textScanningDoesNot3">The code is not affected by light or reflection\nshade.</string>
    <string name="textScanningDoesNot4">The code does not have to fill the entire scan area.</string>
    <string name="textScanningDoesNot5">Do not place the camera too close because it may not be able to focus of the code.</string>
    <string name="textScanningDoesNot6">Two-finger zoom may work for these the code is small in size.</string>
    <string name="textScanningDoesNot7">Increasing the scanning area can be effective with codes very large, complex, or very long.</string>
    <string name="scan_with_cheap_phones">Scan with cheap phones</string>
    <string name="textScanningDoesNot8">Scanning with cheap phones can be very difficult either not even possible due to lower camera quality.</string>
    <string name="textScanningDoesNot9">If you can\'t scan, try taking a photo with the app\nUse your normal camera, then scan the image using “Scan Images”.</string>
    <string name="corepermissions">You have not granted permission to the application!\\nGo to settings and grant permissions to the app!\\nThank you</string>
    <string name="pms">You have not granted permission! Please grant permission to the application !!\n</string>
    <string name="text2Setting">The feature to select data from contacts only works when you have permission to read your contacts</string>
    <string name="text1Setting">Allow access to contacts?</string>
    <string name="please_grant_read_external_storage">Please grant read external storage permission</string>
    <string name="permissionssetting">Permissions have not been granted to the application!\n Go to settings -> grant permissions</string>
    <string name="anser_grant_permission">If you do not grant permission, you cannot use this application.</string>
    <string name="goto_setting_and_grant_permission">Settings -  Permissions and grant permissions to the app.</string>

    <string name="message_purchase_one">%s</string>
    <string name="introduce">Introduce</string>
    <string name="introduce1">This is a mobile application designed to help users scan QR codes and save the information encoded in them. Some key features of this application include:</string>
    <string name="introduce2"> + Scan QR codes easily and quickly using your device\'s camera</string>
    <string name="introduce3"> + Display information encoded in a QR code, such as website links, contact information, text, and more.</string>
    <string name="introduce4"> + Allows users to record important information from that QR code</string>
    <string name="introduce5"> + Store history of scanned QR codes and accompanying notes</string>
    <string name="introduce6">"+ Search and retrieve previously saved notes"</string>
    <string name="introduce7">The main users of this application may include:</string>
    <string name="introduce8"> + People who need to scan and store information from QR codes effectively</string>
    <string name="introduce9"> + Businessmen and businesses want to provide product/service information via QR codes</string>
    <string name="introduce10"> + Those interested in storing and managing encrypted information</string>
    <string name="openSourceLicense">Open Source License</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="privacyPolicy1">When an application uses an open source license, ensuring user privacy becomes even more important. Here are some key points this app\'s privacy policy may cover:</string>
    <string name="privacyPolicy2">" + Information collection: Lists the types of user information (e.g. QR code scan data, notes, device information, etc.) that the app collects and the purposes for which it is used."</string>
    <string name="privacyPolicy3">" + Information security: Explains measures to secure users' personal information, such as data encryption, access rights management, etc."</string>
    <string name="privacyPolicy4">" + Information sharing: Clearly state the circumstances in which the app may share user information (e.g. with developers, service providers, etc.) and the purpose of that sharing."</string>
    <string name="privacyPolicy5">" +User rights: Clearly state user rights such as requesting access, modification, deletion of personal information, etc."</string>
    <string name="privacyPolicy6">" + Compliance with the law: Committed to complying with current privacy protection laws."</string>

</resources>